[WFLY-14375] Upgrade Apache DS to version AM26